# new_pallet

./: .gitignore  Cargo.toml  README.md
node/src/: chain_spec.rs
pallets/blogchain/src/: lib.rs
pallets/news/: Cargo.toml
pallets/news/src/: lib.rs  mock.rs  test.rs
pallets/stores/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
